# Kitsune-Programming-Language

./: .gitignore  CMakeLists.txt  README  kitsuneTest.c
compiler/: SConstruct  expressions.c  expressions.h  generator.c  generator.h  lexer.c  lexer.h  main.c  parser.c  parser.h
compiler/include/: SourceFile.hpp  Token.hpp  expressions.h  expressions.hpp  generator.hpp  identifiers.hpp  lexer.hpp  parser.hpp
compiler/src/: Lexer.cpp  SourceFile.cpp  Token.cpp  expressions.c  expressions.cpp  generator.cpp  identifiers.cpp  lexer.cpp  main.c  main.cpp  parser.c  parser.cpp
compiler/xcode/: kitc.1
compiler/xcode/gc/lib/: libcord.1.0.3.dylib  libcord.la  libgc.1.0.3.dylib  libgc.la  libgccpp.la  (+1 more)
compiler/xcode/kitc.xcodeproj/: project.pbxproj
documentation/: kitsune revision idea.txt  point object sample.kit
examples/: basics.kit  functions.kit  objects.kit
kit-r2/: CMakeLists.txt
kit-r2/runtime/: MessageIDs.txt
kit-r2/runtime/include/: core.hpp  integer.hpp
kit-r2/runtime/include/kitpl/: array.hpp  string.hpp
kit-r2/runtime/src/: array.cpp  boolean.cpp  float.cpp  integer.cpp
logo and icon/: KitsuneLogo.psd
netbeans/kitsunec/nbproject/: Makefile-Debug.mk  Makefile-Linux-Debug.mk  Makefile-Mac-Debug.mk  Makefile-Mac-Release.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
runtime/: MessageIDs.txt  SConstruct  array.c  array.h  boolean.c  boolean.h  character.c  character.h  core.c  core.h  float.c  float.h  integer.c  integer.h  object.c  object.h  string.c  string.h
runtime/include/kitpl/: array.hpp  boolean.hpp  core.hpp  float.hpp  integer.hpp  object.hpp  string.hpp
runtime/rewrite/: SConstruct  core.cpp  core.hpp  object.cpp  object.hpp  stringIds.txt  tempheaders.hpp
runtime/src/: array.cpp  boolean.cpp  float.cpp  integer.cpp  object.cpp  string.cpp
testing/: SConstruct  helloWorld.c  helloWorld.kit
utils/src/: kit-hash.cpp
xcode/kitsune/: kitsune.cpp  kitsuneTarget.xcconfig  kitsune_Prefix.pch
xcode/kitsune/kitsune.xcodeproj/: project.pbxproj
(+1 files in other folders)
